Update modification date, when modifying element (#132)
* Update modification date, when modify element
---------

Signed-off-by: maissa SOUISSI <maissa.souissi@rte-france.com>