@@ -31,7 +31,6 @@ import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.gridsuite.directory.server.DirectoryException.Type.*;
@@ -285,7 +284,7 @@ public class DirectoryService {
             return List.of();
         }
 
-        return getDirectoryElementsStream(directoryUuid, userId, types).collect(Collectors.toList());
+        return getDirectoryElementsStream(directoryUuid, userId, types).toList();
     }
 
     private Stream<ElementAttributes> getDirectoryElementsStream(UUID directoryUuid, String userId, List<String> types) {
@@ -348,8 +347,8 @@ public class DirectoryService {
     @Transactional
     public void updateElementLastModifiedAttributes(UUID elementUuid, LocalDateTime lastModificationDate, String lastModifiedBy) {
         DirectoryElementEntity elementToUpdate = getDirectoryElementEntity(elementUuid);
-        elementToUpdate.setLastModificationDate(lastModificationDate);
-        elementToUpdate.setLastModifiedBy(lastModifiedBy);
+        elementToUpdate.updateModificationAttributes(lastModifiedBy, lastModificationDate);
+
     }
 
     public void updateElementsDirectory(List<UUID> elementsUuids, UUID newDirectoryUuid, String userId) {
@@ -563,11 +562,11 @@ public class DirectoryService {
             throw new DirectoryException(NOT_FOUND);
         }
 
-        Map<UUID, Long> subElementsCount = getSubElementsCount(elementEntities.stream().map(DirectoryElementEntity::getId).collect(Collectors.toList()), types);
+        Map<UUID, Long> subElementsCount = getSubElementsCount(elementEntities.stream().map(DirectoryElementEntity::getId).toList(), types);
 
         return elementEntities.stream()
                 .map(attribute -> toElementAttributes(attribute, subElementsCount.getOrDefault(attribute.getId(), 0L)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void notify(@NonNull String notificationName, @NonNull UUID elementUuid, @NonNull String userId) {
@@ -669,6 +668,6 @@ public class DirectoryService {
                     return elementAccessible;
                 })
                 .flatMap(Optional::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
